# CodeCudaEngine

./: README.md
project/: CMakeLists.txt  build_dist.ps1
project/app/: CMakeLists.txt  main.cpp
project/autotune_logs/: benchmark_results.json
project/core/: CMakeLists.txt
project/core/include/: CodeCuda.cuh  CodeInclude.h  CodeStructs.cuh
project/core/src/: CMakeLists.txt  CodeCommon.hpp  CodeCuda.cu  CodeKernels.hpp  CudaEngineInclude.hpp
project/core/src/common/: Logger.hpp
